data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_172.wast
;; 3. **Indirect Branch in Loop Table**:    - Description: Use a `br_table` instruction within a loop to branch to multiple potential targets, including the loop itself. The table must index correctly to ensure branches jump to the intended targets.    - Reasoning: Checks the correct resolution of indirect branches in a loop and ensures the proper label is targeted.

(assert_invalid
 (module (func $indirect-branch-in-loop-table
  (block $out
   (loop $in
    (i32.const 0)
    (br_table $in $out)))))
 "type mismatch"
)